<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleDynamo</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="button_ldump">LDump</string>
    <string name="button_gdump">GDump</string>
    <string name="send">send</string>
    <string name="edittext_hint">Compose message</string>
    <string name="count_click">Counter</string>
    <string name="delete">delete</string>


</resources>